FIX: fix rounding on mobile nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -252,13 +252,11 @@ footer {
         font-size: 22px;
     }
     
-    /* Dropdown container */
     .nav-dropdown {
         position: relative;
         display: inline-block;
     }
     
-    /* Dropdown content (hidden by default) */
     .nav-dropdown-content {
         display: none;
         position: absolute;
@@ -270,21 +268,18 @@ footer {
         border-radius: 10px;
     }
     
-    /* Links inside the dropdown */
     .nav-dropdown-content a {
         color: #fff !important;
         text-decoration: none;
         padding: 12px 16px;
         display: block;
-        border-radius: 10px;
+        border-radius: 8px;
     }
     
-    /* Show the dropdown menu on hover */
     .nav-dropdown:hover .nav-dropdown-content {
         display: block;
     }
     
-    /* Change color of dropdown links on hover */
     .nav-dropdown-content a:hover {
         background-color: #f54876;
     }
